<resources>

    <string name="app_name_about">AppName</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_information">Información</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="action_send">Enviar</string>
    <string name="incoming_service_number">8888</string>
    <string name="incoming_free_number">8000</string>
    <string name="free_commnet_tag">feed 1015</string>
    <!--InfoActivity's string -->
    <string name="about_title">Acerca de</string>
    <string name="send_comment">Enviar comentario</string>


    <string name="action_entumovil">entuMovil</string>

    <!--FeedbackActivity's string -->
    <string name="feedback_presentation_text">¡Sus comentarios gratuitos nos ayudarán a mejorar esta aplicación!</string>
    <string name="feedback_theme_selector">Seleccione un tema</string>
    <string name="feedback_comment_hint">1. Problemas que le ocurrieron.\n2. Cualquier cosa que quiera contarnos.</string>
    <string name="feedback_identification">Su dirección de correo (opcional)</string>
    <string name="feedback_regardless">¡Sus comentarios ayudarán a mejorar la aplicación!\nGracias</string>

    <string name="entumovil_promo">En este instante no tienes actualizaciones disponibles Actualícese GRATIS</string>
    <string name="comment_sent">Comentario enviado.</string>
    <string name="update_requested">Actualización solicitada.</string>
    <string name="registration_requested">Solicitud de registro enviada.</string>

    <!--AboutActivity's string -->
    <string name="app_version_label">Versión</string>
    <string name="app_copyright_symbol">Copyright ©</string>
    <string name="app_copyright2">Todos los derechos reservados</string>
    <string name="app_details_label">Descripción</string>
    <string name="app_owner">entuMovil.Desoft</string>
    <string name="app_copyright_start_year">2017</string>

    <array name="themes">
        <item>Seleccione un tema</item>
        <item>Calidad del servicio</item>
        <item>Calidad de la información</item>
        <item>Funcionalidad</item>
        <item>¡Error!</item>
        <item>Otros</item>
    </array>

    <string name="app_description_start">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="app_description_end">
            \n\nPara mayor información, búsquenos a través de nuestros contactos y marque la diferencia con nuestros servicios.
            \n\nVisítenos en http://www.entumovil.cu
            \n\nEscriba a: atencion@entumovil.cu
            \n\nTeléfono: 78323501</string>
    <string name="app_name_module">AppName</string>
    <string name="enviar_comentario">Enviar comentario</string>
    <string name="seleccin_un_tema">Seleccione un tema</string>
    <string name="app_no_funcio_ok_sin_permiso_de_envio_de_sms">La aplicación no puede funcionar correctamente si usted no le permite enviar SMS</string>
    <string name="informacion">Información</string>
    <string name="delivered_comment">Su comentario ha sido enviado.</string>
    <string name="comment_cant_be_empty">El comentario no debe estar vacío.</string>
    <string name="emergy_calls_only">El dispositivo solo puede realizar llamadas de emergencia.</string>
    <string name="out_of_service">Red móvil no disponible. Compruebe la disponibilidad en su dispositivo.</string>
    <string name="plane_mode">No está activada la función para el envío de mensajes. Desactive el perfil Fuera de línea y vuelva a intentarlo.</string>


</resources>

