<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white">

    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/logoLayout"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center">
            <TextView
                android:id="@+id/lbl_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HeaderBoldBlue"
                android:text="@string/app_name_about"/>
            <TextView android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HeaderNormalGrey"
                android:text="@string/app_version_label"/>
            <ImageView
                android:id="@+id/logo"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:scaleType="fitCenter"
                android:background="@drawable/ic_launcher"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/lbl_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HeaderNormalBlue"
                android:text="@string/app_details_label"
                android:onClick="showDescription"
                android:clickable="true" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/logoLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/logo_entumovil"
                android:background="@drawable/ic_entumovil"
                android:scaleType="centerCrop"
                android:cropToPadding="false" />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/logo_desfot"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_desoft"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:cropToPadding="false" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/app_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HeaderNormalGrey"
                android:text="@string/app_copyright_symbol"/>
            <TextView
                android:id="@+id/copyright2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HeaderThinGrey"
                android:text="@string/app_copyright2"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
